<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/mainBackground" tools:context=".onboarding.signup.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout style="@style/passwordTil"
        android:id="@+id/emailTil" android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginStart="16dp" android:layout_marginTop="80dp" android:layout_marginEnd="16dp"
        android:hint="@string/mail" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText style="@style/passwordTiet"
            android:id="@+id/emailTiet" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/passwordTil"
        android:id="@+id/passwordTil" android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
        android:hint="@string/password" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/emailTil">
        <com.google.android.material.textfield.TextInputEditText style="@style/passwordTiet"
            android:id="@+id/passwordTiet" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/passwordTil"
        android:id="@+id/confirmPasswordTil" android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
        android:hint="@string/confirmPassword" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/passwordTil">
        <com.google.android.material.textfield.TextInputEditText style="@style/passwordTiet"
            android:id="@+id/confirmPasswordTiet" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton style="@style/signUpButton"
        android:id="@+id/signInButton" android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginStart="16dp" android:layout_marginTop="24dp" android:layout_marginEnd="16dp"
        android:text="@string/signIn" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTil"/>

    <TextView style="@style/signInLabel" android:id="@+id/registerText"
        android:layout_width="0dp" android:layout_height="wrap_content"
        android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
        android:text="@string/backToSignIn" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
